--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "laravel"
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
