--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         "laravel"
     ],
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "ext-json": "*",
         "ext-libxml": "*",
         "ext-simplexml": "*",
-        "illuminate/contracts": "^8.0",
-        "illuminate/database": "^8.0",
-        "illuminate/support": "^8.0",
-        "illuminate/container": "^8.0"
+        "illuminate/contracts": "^9.0",
+        "illuminate/database": "^9.0",
+        "illuminate/support": "^9.0",
+        "illuminate/container": "^9.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0"
